--- a/index.html
+++ b/index.html
@@ -4,32 +4,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CRM Contact Form</title>
-    <script
-src='//in.fw-cdn.com/31719983/876676.js'
-chat='true'>
-</script>
+    <script src='//in.fw-cdn.com/31719983/876676.js' chat='true'></script>
 </head>
 <body>
 
     <h2>Contact Form</h2>
-    <form name="summa form" action="/submit_form" method="POST">
+    <form id="crm-contact-form" name="crm_contact_form" method="POST">
         <label for="first_name">First Name:</label><br>
-        <input type="text" id="first_name" name="first_name" required><br><br>
+        <input type="text" id="first_name_input" name="first_name" required><br><br>
 
         <label for="last_name">Last Name:</label><br>
-        <input type="text" id="last_name" name="last_name" required><br><br>
+        <input type="text" id="last_name_input" name="last_name" required><br><br>
 
         <label for="account_name">Account Name:</label><br>
-        <input type="text" id="account_name" name="account_name" required><br><br>
+        <input type="text" id="account_name_input" name="account_name" required><br><br>
 
         <label for="email">Email:</label><br>
-        <input type="email" id="email" name="email" required><br><br>
+        <input type="email" id="email_input" name="email" required><br><br>
 
         <label for="mobile">Mobile:</label><br>
-        <input type="tel" id="mobile" name="mobile" pattern="[0-9]{10}" required><br><br>
+        <input type="tel" id="mobile_input" name="mobile" pattern="[0-9]{10}" required><br><br>
 
-        <input type="submit" value="Submit">
+        <input type="submit" id="submit_button" value="Submit">
     </form>
+
+    <script>
+        // JavaScript to prevent form submission (for testing purposes) and display data in the console
+        document.getElementById("crm-contact-form").addEventListener("submit", function(event){
+            event.preventDefault(); // Prevent actual form submission
+            console.log("First Name: " + document.getElementById("first_name_input").value);
+            console.log("Last Name: " + document.getElementById("last_name_input").value);
+            console.log("Account Name: " + document.getElementById("account_name_input").value);
+            console.log("Email: " + document.getElementById("email_input").value);
+            console.log("Mobile: " + document.getElementById("mobile_input").value);
+        });
+    </script>
 
 </body>
 </html>
