--- a/index.html
+++ b/index.html
@@ -25,15 +25,24 @@
         <label for="mobile">Mobile:</label><br>
         <input type="tel" id="mobile_input" name="mobile" pattern="[0-9]{10}" required><br><br>
 
-        <input type="submit" id="submit_button" value="Submit">
+        <input type="submit" id="submit_button" value="Submit" onclick="identify()">
     </form>
 
      <script>
-        var new_account = {
-                "name": document.getElementById("account_name_input").value;
-        };
-        var identifier = document.getElementById("email_input").value;
-        fwcrm.identify(identifier, new_account);
+
+         function identify(){
+             var new_contact = {
+	"First name": document.getElementById("first_name_input").value, //Replace with first name of the user
+	"Last name": document.getElementById("last_name_input").value, //Replace with last name of the user
+	"Email": document.getElementById("email_input").value, //Replace with email of the user
+	"Mobile": document.getElementById("mobile_input").value, //Replace with a custom field
+	"company": {
+		"Name": document.getElementById("last_name_input").value
+	}
+};
+var identifier = document.getElementById("email_input").value;
+fwcrm.identify(identifier, new_contact);
+         }
         
     </script>
 
