last name removed

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
          function identify(){
              var new_contact = {
 	"First name": document.getElementById("first_name_input").value, //Replace with first name of the user
-	"Last name": document.getElementById("last_name_input").value, //Replace with last name of the user
+	//"Last name": document.getElementById("last_name_input").value, //Replace with last name of the user
 	"Email": document.getElementById("email_input").value, //Replace with email of the user
 	"Mobile": document.getElementById("mobile_input").value, //Replace with a custom field
 	"company": {
