Update index.html onclick

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <label for="first_name">First Name:</label><br>
         <input type="text" id="first_name_input" name="first_name" required><br><br>
 
-<!--         <label for="last_name">Last Name:</label><br> -->
-<!--         <input type="text" id="last_name_input" name="last_name" required><br><br> -->
+        <label for="last_name">Last Name:</label><br>
+        <input type="text" id="last_name_input" name="last_name" required><br><br>
 
         <label for="account_name">Account Name:</label><br>
         <input type="text" id="account_name_input" name="account_name" required><br><br>
