--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <label for="email">Email:</label><br>
         <input type="email" id="email_input" name="email" required><br><br>
 
-        <label for="mobile">Mobile:</label><br>
+        <label for="textarea">area:</label><br>
         <input type="tel" id="mobile_input" name="mobile" pattern="[0-9]{10}" required><br><br>
 
         <input type="submit" id="submit_button" value="Submit" onclick="identify()">
