--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 </head>
 <body>
 
-    <h2>Contact Form</h2>
+<!--     <h2>Contact Form</h2>
     <form id="crm-contact-form" name="crm_contact_form" method="POST">
         <label for="first_name">First Name:</label><br>
         <input type="text" id="first_name_input" name="first_name" required><br><br>
 
 <!--         <label for="last_name">Last Name:</label><br> -->
 <!--         <input type="text" id="last_name_input" name="last_name" required><br><br> -->
-
+<!-- 
         <label for="account_name">Account Name:</label><br>
         <input type="text" id="account_name_input" name="account_name" required><br><br>
 
@@ -44,7 +44,8 @@ var identifier = document.getElementById("email_input").value;
 fwcrm.identify(identifier, new_contact);
          }
         
-    </script>
+    </script> -->
+	<script src='https://sachina.myfreshworks.com/crm/sales/web_forms/7ac762574a1fc904182e57468e3e651bb24ddc5dc64d65a33e4eb31b2ee99e8a/form.js' crossorigin='anonymous' id='fs_7ac762574a1fc904182e57468e3e651bb24ddc5dc64d65a33e4eb31b2ee99e8a'></script>
 
 </body>
 </html>
