--- a/index.html
+++ b/index.html
@@ -113,7 +113,10 @@ fwcrm.identify(identifier, new_contact);
             alert('Form submitted and account created in Freshworks CRM!');
         });
     </script> -->
-
+<script
+src='//in.fw-cdn.com/32153490/1150073.js'
+chat='true'>
+</script>
    
  -->
 </body>
